buildscript {
    repositories {
        maven {url = 'https://maven.minecraftforge.net'}
        maven {url = 'https://maven.parchmentmc.org'}
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.parchmentmc:librarian:1.+'
    }
}

plugins {
    id "com.matthewprenger.cursegradle" version "1.4.0"
    id "org.sonarqube" version "3.3"
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'

sonarqube {
    properties {
        property "sonar.projectKey", "AlmostReliable_energymeter-forge"
        property "sonar.organization", "almostreliable"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}

version = "${minecraft_version}-${mod_version}"
group = "${mod_base_package}.${mod_id}"
archivesBaseName = mod_id

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
minecraft {
    mappings channel: mappings_channel, version: mappings_version

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            // data generation
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
    }
}

// resources from data generation
sourceSets.main.resources {srcDir 'src/generated/resources'}

repositories {
    maven {
        name 'CurseMaven'
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
        maven {
            name 'CC Tweaked'
            url 'https://squiddev.cc/maven/'
            content {
                includeGroup 'org.squiddev'
            }
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    // optional dependencies
    implementation fg.deobf("org.squiddev:cc-tweaked-${minecraft_version}:${cct_version}")

    // runtime dependencies
    runtimeOnly fg.deobf("curse.maven:jei-238222:3606055") // JEI - 9.2.2.74
    runtimeOnly fg.deobf("curse.maven:top-245211:3586969") // TOP - 5.0.2
    runtimeOnly fg.deobf("curse.maven:pipez-443900:3569514") // Pipez - 1.0.1
    runtimeOnly fg.deobf("curse.maven:solare-381462:3569095") // Solar Energy - 0.4.0.3
    runtimeOnly fg.deobf("curse.maven:smartijnlib-454372:3596492") // SuperMartijn642's Core Lib - 1.0.16 - Trash Cans Lib
    runtimeOnly fg.deobf("curse.maven:trash-394535:3597654") // Trash Cans - 1.0.12
}

// This block of code expands all the gradle properties in the specified resource targets.
// It copies them into the targets and expands all the defined properties.
def resourceTargets = ['META-INF/mods.toml', 'pack.mcmeta']
def intoTargets = ["$rootDir/out/production/resources/", "$rootDir/out/production/${project.name}.main/", "$rootDir/bin/main/"]
def replaceProperties = [mod_id                 : mod_id,
                         mod_name               : mod_name,
                         mod_version            : mod_version,
                         mod_authors            : mod_authors,
                         mod_description        : mod_description,
                         minecraft_version_range: minecraft_version_range,
                         forge_version_range    : forge_version_range,
                         loader_version_range   : loader_version_range,
                         cct_version_range      : cct_version_range,
                         github_user            : github_user,
                         github_repo            : github_repo]
processResources {
    inputs.properties replaceProperties
    replaceProperties.put 'project', project

    filesMatching(resourceTargets) {
        expand replaceProperties
    }

    intoTargets.each {target ->
        if (file(target).exists()) {
            copy {
                from(sourceSets.main.resources) {
                    include resourceTargets
                    expand replaceProperties
                }
                into target
            }
        }
    }
}

jar {
    manifest {
        attributes(["Specification-Title"     : mod_id,
                    "Specification-Vendor"    : mod_authors,
                    "Specification-Version"   : "1", // We are version 1 of ourselves
                    "Implementation-Title"    : project.name,
                    "Implementation-Version"  : mod_version,
                    "Implementation-Vendor"   : mod_authors,
                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")])
    }
}

curseforge {
    if (System.getenv('CF_API_KEY') != null) {
        // GitHub actions
        apiKey = System.getenv('CF_API_KEY')
    } else {
        // error prevention
        apiKey = "none"
    }
    project {
        id = project_id
        changelogType = 'markdown'
        changelog = "The whole changelog can be found [here](https://github.com/${github_user}/${github_repo}/blob/${github_branch}/CHANGELOG.md)."
        releaseType = 'release'
        addGameVersion minecraft_version

        mainArtifact(jar) {
            displayName = "${System.getenv('FILE_NAME')}-${minecraft_version}-${mod_version}"
        }
    }
}

jar.finalizedBy('reobfJar')
